# NotPetyaAgain

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
scripts/: debug.py  dropper.ps1  gpo-injection.ps1  loader.py  reverse-shell.ps1
src/: destroy.rs  efi_rng.rs  file.rs  gpt.rs  main.rs  mbr.rs  ntfs.rs  ransom_note.txt  recover.rs  text.txt
src/efi/: efi_file.rs  efi_rng.rs  efi_vars.rs  mod.rs
src/include/: chdsk_note.txt  public_key.hex  ransom_note.txt
