[package]
name = "notpetyaagain_boot"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.15.2", features = ["exts", "logger"] }
uefi-services = "0.12.1"
log = { version = "0.4.0", default-features = false }
getrandom = { version = "0.2", features = ["rdrand"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_core = "0.6.3"
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
hex = { version = "0.4", default-features = false }
aes = { version = "0.7.5", features = ["force-soft"] }

[profile.release]
panic = "abort"
opt-level = 'z'
codegen-units = 1
